fix/main: ajout du background ombre, recentrage de l'image en version mobile

--- a/styles/style-m375.css
+++ b/styles/style-m375.css
@@ -9,6 +9,17 @@
     align-items: center;
 }
 
+#component-right-side {
+    margin: 0;
+    height: 90%;
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    padding: 24.67% 6.4% 8.9% 6.4%;
+    background-image: url(C:/Users/Acs/Documents/JS/02_faq/images/schattencopy.svg);
+    background-position-y: -9%;
+}
+
 #box {
     display: none;
 }
@@ -19,7 +30,6 @@
     height: auto;
     width: 90%;
     left: 2%;
-
 }
 
 .section {
@@ -35,30 +45,16 @@ h1 {
     margin-top: 0;
 }
 
-#component-right-side {
-    margin: 0;
-    height: 90%;
-    width: 100%;
-    background-image: none;
 
-    display: block;
-    box-sizing: border-box;
-    padding: 24.67% 6.4% 8.9% 6.4%;
-
-}
 
 #faq {
     width: 100%;
-    height: 90%;
-}
-
-.schatten {
-    display: none;
+    height: 100%;
 }
 
 #component-right-side p {
-    width: 100%;
-    margin: 0;
+     width: 100%;
+    margin: 0; 
 }
 
 #image {
